--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,5 +1,7 @@
-FROM trestletech/plumber
+FROM rstudio/plumber:latest
 LABEL maintainer="Nikolaus Piccolotto <nikolaus.piccolotto@tuwien.ac.at>"
+
+RUN apt-get update -qq && apt-get install -y
 
 RUN R -e "install.packages('stochvol')"
 RUN R -e "install.packages('zoo')"
@@ -15,6 +17,7 @@ RUN R -e "install.packages('cluster')"
 RUN R -e "install.packages('philentropy')"
 RUN R -e "install.packages('lhs')"
 RUN R -e "install.packages('tictoc')"
+RUN R -e "install.packages('pryr')"
 
 CMD ["/app/api.R"]
 
